[gd_scene load_steps=7 format=3 uid="uid://dtsua53pi2tya"]

[ext_resource type="FontFile" uid="uid://bole0tasrv4tw" path="res://scenes/data/fonts/Rakkas-Regular.ttf" id="1_4ld2n"]
[ext_resource type="Script" path="res://scenes/battle/hud/forfeit_dialog.gd" id="1_n1rd1"]
[ext_resource type="FontFile" uid="uid://7uaw5jndvhyl" path="res://scenes/data/fonts/Aleo-Regular.ttf" id="2_imici"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lok7g"]
bg_color = Color(0.937255, 0.901961, 0.870588, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_po01f"]
bg_color = Color(0.937255, 0.901961, 0.870588, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.223529, 0.168627, 0.105882, 0.698039)

[sub_resource type="LabelSettings" id="LabelSettings_jrk2x"]
font = ExtResource("1_4ld2n")
font_size = 46
font_color = Color(0.360784, 0.254902, 0.113725, 1)
shadow_color = Color(0, 0, 0, 0.572549)

[node name="ForfeitDialog" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n1rd1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.345098)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -90.0
offset_right = 180.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lok7g")

[node name="Panel2" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 7.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_po01f")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -68.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "Forfeit?"
label_settings = SubResource("LabelSettings_jrk2x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -54.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="ForfeitConfirmButton" type="Button" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_imici")
text = "Confirm"

[node name="ForfeitCancelButton" type="Button" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_imici")
text = "Cancel"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/HBoxContainer/ForfeitConfirmButton" to="." method="_on_forfeit_confirm_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ForfeitCancelButton" to="." method="_on_forfeit_cancel_button_pressed"]

